fixed alignment of about page

--- a/scss/about.scss
+++ b/scss/about.scss
@@ -1,9 +1,10 @@
 main#about {
   .profiles {
-    width: 100%;
-    height: 100%;
+    width: 85%;
+    height: 85%;
+    margin: auto;
     .profile {
-      float: left;
+      display: inline-block;
       max-width: 300px;
       margin: 1rem;
       .profile-image {
